--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,16 @@
 Django==2.2.13
+# postgreSQLドライバ
 psycopg2==2.7.6
 psycopg2-binary==2.7.7
-djangorestframework==3.9.2
+# reactとの連携に必要
 django-cors-headers==2.5.2
 # herokuに必要
-# dj-database-url
 gunicorn
 django-heroku
 whitenoise
-# whitenoise==3.0.0
+# DRFに必要
+markdown
+django-filter
+djangorestframework==3.9.2
 # メール認証付きユーザー登録機能に必要
 django-allauth
