--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,6 @@ Django==2.2.13
 # postgreSQLドライバ
 psycopg2==2.7.6
 psycopg2-binary==2.7.7
-# reactとの連携に必要
-django-cors-headers==2.5.2
 # herokuに必要
 gunicorn
 django-heroku
@@ -12,5 +10,5 @@ whitenoise
 markdown
 django-filter
 djangorestframework==3.9.2
-# メール認証付きユーザー登録機能に必要
-django-allauth
+# React（localhost:3000）からDjango（localhost:8000）のAPIを叩く際に必要
+django-cors-headers==2.5.2
