--- a/Dockerfile.python
+++ b/Dockerfile.python
@@ -1,5 +1,5 @@
-# Python3.7のイメージを基にする
-FROM python:3.7
+# Python3.7.10のイメージを基にする
+FROM python:3.7.10-alpine
 # Pythonが標準入出力をバッファリングすることを防ぐ
 ENV PYTHONUNBUFFERED 1
 
