--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.node
+    command: npm start
     volumes:
       - .:/code
     ports:
