--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,36 +1,31 @@
 version: "3"
 
 services:
-  # db:
-  #   image: postgres
-  #   environment:
-  #     - POSTGRES_DB=${DB_NAME}
-  #     - POSTGRES_USER=${DB_USER}
-  #     - POSTGRES_PASSWORD=${DB_PASSWORD}
-  #   volumes:
-  #     - postgres_data:/var/lib/postgresql/data
-  #   env_file:
-  #     - .env
+  db:
+    image: postgres
+    environment:
+      - POSTGRES_DB=${DB_NAME}
+      - POSTGRES_USER=${DB_USER}
+      - POSTGRES_PASSWORD=${DB_PASSWORD}
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    env_file:
+      - .env
 
   django:
     build:
-      # 現在のディレクトリの中から以下のdockerfileを探す
       context: .
       dockerfile: Dockerfile.python
-    # 正常起動後に実行するコマンド
     command: python3 manage.py runserver 0.0.0.0:8000
-    # データを永続化させる場合の設定。`host側のパス:container側のパス`でパスを記載
     volumes:
       - .:/code
-    # 開放するポートを指定。`host側のポート:container側のポート`でポートを記載
     ports:
       - 8000:8000
-    # 環境変数に設定するファイル
     env_file:
       - .env
-    # 接続するサービス
-    # depends_on:
-    #   - db
+    接続するサービス
+    depends_on:
+      - db
 
   # react:
   #   build:
@@ -46,5 +41,5 @@ services:
   #   depends_on:
   #     - django
 
-# volumes:
-#   postgres_data:
+volumes:
+  postgres_data:
