--- a/requirements.txt
+++ b/requirements.txt
@@ -18,5 +18,7 @@ django-environ
 social-auth-app-django
 # recapcthaの認証機能をdjangoに全て任せる
 django-recaptcha2
-# モデルのインスタンス毎に権限設定をするのに必要
+# モデルの全オブジェクトを1ユーザー毎に権限設定をするのに必要
 django-guardian
+# オブジェクトをさらに行レベルで権限設定するのに必要
+rules
