--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-Django==2.2.20
+Django==3.0.10
 # postgreSQLドライバ
 psycopg2==2.7.6
 psycopg2-binary==2.7.7
@@ -11,7 +11,7 @@ markdown
 django-filter
 djangorestframework==3.11.2
 # React（localhost:3000）からDjango（localhost:8000）のAPIを叩く際に必要
-django-cors-headers==2.5.2
+# django-cors-headers==3.2.1
 # シークレット環境変数の設定に必要
 django-environ
 # social loginに必要
