--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,42 +1,36 @@
 version: 2.1
 jobs:
-  build:  # required for runs that don't use workflows
+  build: # required for runs that don't use workflows
     working_directory: ~/Atom
     docker:
-      - image: circleci/python:3.7.10  # primary container for the build job
+      - image: circleci/python:3.7.10 # primary container for the build job
         auth:
           username: mydockerhub-user
-          password: $DOCKERHUB_PASSWORD  # context / project UI env-var reference
+          password: $DOCKERHUB_PASSWORD # context / project UI env-var reference
         environment:
           PIPENV_VENV_IN_PROJECT: true
           DATABASE_URL: postgresql://root@localhost/circle_test?sslmode=disable
       - image: circleci/postgres:9.6.2 # an example of how to specify a service container
         auth:
           username: mydockerhub-user
-          password: $DOCKERHUB_PASSWORD  # context / project UI env-var reference
+          password: $DOCKERHUB_PASSWORD # context / project UI env-var reference
         environment:
           POSTGRES_USER: root
           POSTGRES_DB: circle_test
     steps:
-      - checkout  # checkout source code to working directory
+      - checkout # checkout source code to working directory
       - run:
-          command: |  # use pipenv to install dependencies
+          command: | # use pipenv to install dependencies
             sudo pip install pipenv
             pipenv install
             pipenv run python manage.py test
   deploy:
-      executor: heroku/default
-      steps:
-        - checkout
-        - heroku/install
-        - run:
-            command: >
-              echo "python manage.py makemigrations"
-              echo "python manage.py migrate"
-        - heroku/deploy-via-git
-
-
-
+    steps:
+      - checkout
+      - run:
+          name: deploy master branch to Heroku
+          command: |
+            git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master
 
 # version: 2.1
 # orbs:
