--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,43 +61,8 @@ jobs:
       - run:
           name: deploy master branch to Heroku
           command: |
+            sudo pip install pipenv
+            pipenv install
             python manage.py makemigrations
             python manage.py migrate
             git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master
-
-# version: 2.1
-# orbs:
-#   # https://circleci.com/orbs/registry/orb/circleci/heroku
-#   heroku: circleci/heroku@1.2.6
-# jobs:
-#   build:
-#   :
-#   deploy:
-#     executor: heroku/default
-#     steps:
-#       - checkout
-#       - heroku/install
-#       - heroku/deploy-via-git:
-#           only-branch: master
-# version: 2.1
-
-# orbs:
-#   python: circleci/python@0.2.1
-
-# jobs:
-#   build-and-test:
-#     executor: python/default
-#     steps:
-#       - checkout
-#       - python/load-cache
-#       - python/install-deps
-#       - python/save-cache
-#       - run:
-#           command: ./manage.py test
-#           name: Test
-#           when: always
-
-# workflows:
-#   main:
-#     jobs:
-#       - build-and-test
