--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,8 +61,6 @@ jobs:
       - run:
           name: deploy master branch to Heroku
           command: |
-            sudo pip install pipenv
-            pipenv install
-            python manage.py makemigrations
-            python manage.py migrate
+            docker container exec -it atom_django_1 python manage.py makemigrations
+            docker container exec -it atom_django_1 python manage.py migrate
             git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master
