--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,21 +17,21 @@ version: 2
 jobs:
   build: # required for runs that don't use workflows
     working_directory: ~/Atom
-    docker:
-      - image: circleci/python:3.7.10 # primary container for the build job
-        auth:
-          username: mydockerhub-user
-          password: $DOCKERHUB_PASSWORD # context / project UI env-var reference
-        environment:
-          PIPENV_VENV_IN_PROJECT: true
-          DATABASE_URL: postgresql://root@localhost/circle_test?sslmode=disable
-      - image: circleci/postgres:9.6.2 # an example of how to specify a service container
-        auth:
-          username: mydockerhub-user
-          password: $DOCKERHUB_PASSWORD # context / project UI env-var reference
-        environment:
-          POSTGRES_USER: root
-          POSTGRES_DB: circle_test
+    # docker:
+    #   - image: circleci/python:3.7.10 # primary container for the build job
+    #     auth:
+    #       username: mydockerhub-user
+    #       password: $DOCKERHUB_PASSWORD # context / project UI env-var reference
+    #     environment:
+    #       PIPENV_VENV_IN_PROJECT: true
+    #       DATABASE_URL: postgresql://root@localhost/circle_test?sslmode=disable
+    #   - image: circleci/postgres:9.6.2 # an example of how to specify a service container
+    #     auth:
+    #       username: mydockerhub-user
+    #       password: $DOCKERHUB_PASSWORD # context / project UI env-var reference
+    #     environment:
+    #       POSTGRES_USER: root
+    #       POSTGRES_DB: circle_test
     steps:
       - checkout # checkout source code to working directory
       - run:
