--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,6 +61,8 @@ jobs:
       - run:
           name: deploy master branch to Heroku
           command: |
+            sudo pip install pipenv
+            pipenv install
             pipenv run python manage.py makemigrations
             pipenv run python manage.py migrate
             git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git master
